[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "pathlibrs"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]


[tool.hatch.envs.default]
dependencies = [
    "maturin>=1.2,<2.0",
    "build",
    "pytest",
]
path = ".venv"

[tool.hatch.envs.default.scripts]
develop = "python -m maturin develop"
build = "python -m build"
test = ["develop", "python -m pytest"]

